--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -79,3 +79,95 @@
     }
   }
 }
+
+.full-hotel-information{
+  transition: all $middle-speed ease-in;
+  &.close-tab{
+    opacity: 0;
+    visibility: hidden;
+  }
+  &.open-tab{
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+//ajax hotel full information
+.hotel-full-info{
+  transition: all $middle-speed ease-in;
+  .header-info{
+    .left {
+      .hotel-name {
+        color: $site-color-light;
+        font-size: 1.4em;
+      }
+      .stars {
+        position: absolute;
+        margin-top: 2px;
+        font-size: 1.4em;
+        right: 18px;
+        .glyphicon-star {
+          color: $gold;
+        }
+        .glyphicon-star-empty {
+          color: $grey-text;
+        }
+      }
+    }
+    .right{
+      font-size: 1.4em;
+      .rate-field{
+        font-weight: 300;
+      }
+      .rate-value{
+        font-weight: 600;
+        color: $green;
+        top: 2px;
+        position: relative;
+      }
+    }
+  }
+  .main-content{
+    .hotel-images{
+      padding: 0px;
+      .big-photo{
+        width: 350px;
+      }
+      .empty-img{
+        color: $grey;
+        font-size: 7em;
+        display: block;
+        margin: auto;
+      }
+      #map-canvas{
+        width: 100%;
+        height: 200px;
+        max-width: 350px;
+        max-height: 400px;
+        border: $light-grey-border;
+      }
+      #gallery-widget{
+        margin: 15px 0px;
+        .gallery-item{
+          margin-right: -2px;
+          img{
+            width: 49px;
+            height: 40px;
+            display: inline-block;
+            padding: 1px;
+            &:hover{
+              border: 1px solid $blue-shadow-color;
+              padding: 0px;
+            }
+          }
+        }
+      }
+    }
+    .hotel-description{
+      padding: 0px;
+      text-align: justify;
+      font-size: 0.95em;
+      font-weight: 300;
+    }
+  }
+}
