--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -55,7 +55,7 @@
     }
     transition: all $middle-speed ease-in;
   }
-  .filter-tour, .filter-flights, .manager-offers, .manager-hot-tours {
+  .filter-tour, .filter-flights, .manager-offers, .manager-hot-tours, .user-hot-tours, .user-favourite-tours {
     .back-to-main{
       visibility: hidden;
       width: 30px;
@@ -141,9 +141,9 @@
           .voyage_is_direct_from, .voyage_is_direct_to {
             background: $grey-light;
           }
-          .field-gettourform-hotel, .create-tour-response, .field-touroffersform-hotel, .field-createhottourform-hotel, .field-manageroffersform-hotel, .field-managerhottourform-hotel {
+          .field-gettourform-hotel, .create-tour-response, .field-touroffersform-hotel, .field-createhottourform-hotel, .field-manageroffersform-hotel, .field-managerhottourform-hotel, .field-userhottourform-hotel {
             .remove-hotel-name, .remove-hotel-name-manager, .remove-hotel-hot-tour, .remove-hotel-name-user-request,
-            .remove-hotel-name-user-offer, .remove-hotel-manager-offers, .remove-hotel-manager-hot-tour{
+            .remove-hotel-name-user-offer, .remove-hotel-manager-offers, .remove-hotel-manager-hot-tour, .remove-hotel-user-hot-tour{
               position: absolute;
               right: 20px;
               top: 9px;
@@ -153,7 +153,7 @@
               }
             }
           }
-          #gettourform-hotel_id, #createtourform-hotel_id, #touroffersform-hotel_id, #createhottourform-hotel_id, #manageroffersform-hotel_id, #managerhottourform-hotel_id {
+          #gettourform-hotel_id, #createtourform-hotel_id, #touroffersform-hotel_id, #createhottourform-hotel_id, #manageroffersform-hotel_id, #managerhottourform-hotel_id, #userhottourform-hotel_id {
             display: none;
             overflow-y: auto;
             max-height: 150px;
@@ -308,6 +308,25 @@
               margin-top: -65px;
             }
           }
+        }
+        [name="order-tour-list"]{
+          max-width: 250px;
+          display: block;
+          width: 100%;
+          height: 34px;
+          padding: 6px 12px;
+          font-size: 14px;
+          line-height: 1.42857143;
+          color: #555;
+          background-color: #fff;
+          background-image: none;
+          border: 1px solid #ccc;
+          border-radius: 0px;
+          -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+          -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
         }
       }
       .right-data {
