--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -1,9 +1,12 @@
-#user-tour-response, #user-tour-response-list, #manager-offers-response, #manager-hot-tours-response{
+#user-tour-response, #user-tour-response-list, #manager-offers-response,
+#manager-hot-tours-response, #user-hot-tours-response, #user-favourite-tours-response{
   .user-tour-wrapper{
     border-bottom: 1px solid $grey-light;
     margin-top: 5px;
     margin-bottom: 5px;
-
+    &:nth-of-type(1){
+      margin-top: 20px;
+    }
     .header-info{
       padding: 0px;
       .count{
@@ -28,6 +31,17 @@
         margin-left: 10px;
         color: $grey-text;
         font-weight: 300;
+      }
+      .glyphicon-heart, .glyphicon-heart-empty{
+        display: inline-block;
+        position: absolute;
+        top: 2px;
+        left: -22px;
+        font-size: 1.2em;
+        color: $grey-light-text;
+        &.favourite{
+          color: red;
+        }
       }
     }
 
