--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -56,7 +56,7 @@
     transition: all $middle-speed ease-in;
   }
   .filter-tour, .filter-flights, .manager-offers, .manager-hot-tours, .user-hot-tours, .user-favourite-tours {
-    .back-to-main{
+    .back-to-main, .back-to-main-from-tour{
       visibility: hidden;
       width: 30px;
       height: 100px;
@@ -328,10 +328,33 @@
           -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
         }
+        .list-data{
+          float: left;
+        }
+        &.small-left{
+          padding-left: 15px;
+          min-width: 300px;
+        }
+        .close-left{
+          opacity: 0;
+          visibility: hidden;
+          margin-left: -250px;
+          float: left;
+          width: 0px;
+        }
       }
       .right-data {
         transition: all $middle-speed ease-in;
         text-align: center;
+        .full-tour-information{
+          margin-left: 1000px;
+          opacity: 0;
+          transition: all $middle-speed ease-in;
+          &.show{
+            opacity: 1;
+            margin-left: 0px;
+          }
+        }
       }
     }
   }
