--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -169,5 +169,21 @@
       font-size: 0.95em;
       font-weight: 300;
     }
+    .hotel-facilities{
+      list-style: none;
+      padding: 0px;
+      li{
+        margin-bottom: 5px;
+        border-bottom: $light-grey-border;
+        .glyphicon-tag{
+          margin-right: 10px;
+          color: $green;
+        }
+        .hint{
+          font-size: 0.85em;
+          color: $grey-text;
+        }
+      }
+    }
   }
 }
