--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -244,7 +244,20 @@
             }
             #gettourform-letter_filter, #createhottourform-letter_filter, #createtourform-letter_filter{
               .checkbox-one{
-                padding: 0px;
+                max-width: 30px;
+                [type="checkbox"]{
+                  visibility: hidden;
+                }
+                .line-name{
+                  margin-left: -4px;
+                }
+                &.active{
+                  border: $grey-border;
+                  background: $green;
+                  .line-name {
+                    color: #ffffff;
+                  }
+                }
               }
             }
           }
