--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -3,6 +3,9 @@
   border-bottom: 1px solid $grey-light;
   margin-top: 5px;
   margin-bottom: 5px;
+  &:nth-of-type(1){
+    margin-top: 20px;
+  }
   .header{
     .count{
       font-size: 0.9em;
