--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -56,7 +56,8 @@
     transition: all $middle-speed ease-in;
   }
   .filter-tour, .filter-flights, .manager-offers, .manager-hot-tours, .user-hot-tours, .user-favourite-tours {
-    .back-to-main, .back-to-main-from-tour, .back-to-main-from-tour-manager, .back-to-main-from-user-get-tour{
+    .back-to-main, .back-to-main-from-tour, .back-to-main-from-tour-manager,
+    .back-to-main-from-user-get-tour, .back-to-main-from-user-flight{
       visibility: hidden;
       width: 30px;
       height: 100px;
@@ -327,7 +328,7 @@
             }
           }
         }
-        [name="order-tour-list"]{
+        [name="order-tour-list"], [name="order-flight-list"]{
           max-width: 300px;
           display: block;
           width: 100%;
