--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -215,4 +215,16 @@ body {
       }
     }
   }
+
+  #preview{
+    &.tooltip-image{
+      position: absolute;
+      img{
+        border: 4px solid $site-color-light;
+        max-width: 75%;
+        min-width: 400px;
+        height: auto;
+      }
+    }
+  }
 }
