--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -343,9 +343,10 @@
           border-radius: 0px;
           -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-          -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-          -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: all $middle-speed ease-in;
+          &.hidden-select{
+            opacity: 0 !important;
+          }
         }
         .list-data{
           float: left;
