--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -231,6 +231,7 @@
     }
     .nav-tabs-tour{
       li{
+        padding: 0px;
         a{
           color: $grey-text;
         }
@@ -256,6 +257,23 @@
         font-size: 0.85em;
         line-height: 12px;
         text-align: justify;
+      }
+    }
+
+    .hotel-facilities{
+      list-style: none;
+      padding: 0px;
+      li{
+        margin-bottom: 5px;
+        border-bottom: $light-grey-border;
+        .glyphicon-tag{
+          margin-right: 10px;
+          color: $green;
+        }
+        .hint{
+          font-size: 0.85em;
+          color: $grey-text;
+        }
       }
     }
   }
