add heart loader

--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -61,6 +61,12 @@
           color: red;
         }
       }
+      .replace-loader{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        margin-left: -22px;
+      }
     }
 
     .body, .people{
