--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -197,5 +197,56 @@
         }
       }
     }
+    .nav-tabs-hotel{
+      li{
+        padding: 0px;
+        a{
+          color: $grey-text;
+        }
+        &.active{
+          a {
+            background: $grey-light;
+            color: #000000;
+          }
+        }
+      }
+    }
+    #testimonials {
+      overflow-y: scroll;
+      max-height: 650px;
+      .testimonial {
+        margin-bottom: 15px;
+        border: $light-grey-border;
+        .header {
+          background: $grey;
+          .date {
+            color: #ffffff;
+            float: right;
+          }
+        }
+        .body {
+          font-size: 0.85em;
+          line-height: 12px;
+          text-align: justify;
+        }
+      }
+    }
+
+    .hotel-facilities{
+      list-style: none;
+      padding: 0px;
+      li{
+        margin-bottom: 5px;
+        border-bottom: $light-grey-border;
+        .glyphicon-tag{
+          margin-right: 10px;
+          color: $green;
+        }
+        .hint{
+          font-size: 0.85em;
+          color: $grey-text;
+        }
+      }
+    }
   }
 }
