fix manager tabs

--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -41,6 +41,11 @@
     a{
       border-radius: 0px;
     }
+    .cost{
+      font-size: 1.2em;
+      color: $gold;
+      font-weight: 600;
+    }
   }
 }
 
