--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -45,6 +45,7 @@ $fast-speed: 0.5s;
 @import "popup";
 @import "tour";
 @import "flight";
+@import "stat";
 
 //fonts
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
