fix user profile

--- a/web/css/profile.scss
+++ b/web/css/profile.scss
@@ -38,6 +38,9 @@
             }
           }
         }
+        &.buttons-action{
+          margin-bottom: 0px;
+        }
       }
       .bootstrap-switch{
         position: relative;
