--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -49,6 +49,7 @@ $fast-speed: 0.5s;
 @import "flight";
 @import "stat";
 @import "profile";
+@import "admin";
 
 //fonts
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
