add admin actions

--- a/web/css/admin.scss
+++ b/web/css/admin.scss
@@ -23,4 +23,16 @@
       }
     }
   }
+  .actions{
+    padding: 0px 3px;
+    .view{
+      color: $site-color;
+    }
+    .edit{
+      color: $gold;
+    }
+    .delete{
+      color: $red;
+    }
+  }
 }
