--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -252,6 +252,10 @@
 }
 
 .top-hotels{
+  .main-title{
+    padding: 0px;
+    font-weight: 600;
+  }
   padding: 0px;
   .hotel-top-wrapper{
     box-shadow: $grey-shadow;
