add WYSIWYG editor

--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -50,6 +50,7 @@ $fast-speed: 0.5s;
 @import "stat";
 @import "profile";
 @import "admin";
+@import "pages";
 
 //fonts
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
