--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -112,8 +112,9 @@
         margin-bottom: 2px;
       }
       .tour-cost{
-        color: $yellow-dirty-hover;
+        color: $gold;
         font-weight: 600;
+        font-size: 1.2em;
       }
       .company-name{
         font-size: 0.8em;
