--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -1,7 +1,7 @@
 //color variable
 $site-color: #0000cd;
 $site-color-hover: #000097;
-$site-color-light: rgba(0, 0, 255, 0.65);
+$site-color-light: rgb(59, 95, 255);
 $grey: #b1b1b1;
 $grey-light: #d0d0d0;
 $grey-extra-light: #f0f0f0;
@@ -57,8 +57,9 @@ $fast-speed: 0.5s;
 body {
   font-family: 'Exo 2' !important;
   #header-navbar {
-    background: #ffffff;
-    border-bottom: $light-grey-border;
+    background: $site-color-light;
+    border-bottom: $site-color-light;
+    color: #ffffff;
 
     &.to-top{
       position: relative;
@@ -76,11 +77,21 @@ body {
         }
       }
     }
+    #header-navbar-collapse{
+      padding: 15px;
+    }
     .navbar-header {
       .navbar-brand {
-        color: $site-color;
+        color: #ffffff;
+        margin-top: 11px;
+        margin-bottom: -12px;
         &:hover {
-          color: $site-color-hover;
+          color: $grey-text;
+        }
+        img{
+          position: relative;
+          top: -29px;
+          max-width: 80%;
         }
       }
       button {
@@ -105,16 +116,31 @@ body {
     .custom-header {
       margin-right: 0px;
       li {
+        &:first-child{
+          a {
+            font-weight: 600;
+            font-size: 1.4em;
+            margin-left: -35%;
+            color: #ffffff;
+            &:hover{
+              color: #ffffff;
+            }
+          }
+        }
         a {
+          padding: 0px 35px;
+          margin-top: 11px;
+          margin-bottom: -12px;
+          color: $site-color-hover;
           &:hover {
-            color: $site-color-hover;
+            color: #ffffff;
           }
         }
         &.active {
-          border-bottom: 3px solid $site-color;
+          border-bottom: 3px solid $site-color-hover;
           a {
-            background: #ffffff;
-            color: $site-color;
+            background: $site-color-light;
+            color: white;
             &:hover {
               color: $site-color-hover;
             }
@@ -122,10 +148,49 @@ body {
         }
         &.dropdown{
           a{
+            outline: none;
             background: transparent;
-            color: $grey;
+            color: $site-color-hover;
+            text-align: center;
+            span{
+              //margin: auto;
+              //d1isplay: block;
+            }
+            .caret{
+              margin-top: -20px;
+              position: relative;
+            }
             &:hover{
               color: $site-color-hover;
+            }
+            &.dropdown-toggle{
+              margin-top: 0px;
+              &:hover{
+                color: #ffffff;
+              }
+            }
+          }
+          .dropdown-menu{
+            text-align: left;
+            margin-top: 20px;
+            padding-bottom: 0px;
+            li{
+              border-bottom: 1px solid $grey-light;
+              &:first-child{
+                margin-top: -5px;
+              }
+              a {
+                font-weight: 300;
+                font-size: 1em;
+                margin-left: 0px;
+                padding: 20px 20px;
+                text-align: left;
+                margin-top: -9px;
+                margin-bottom: -9px;
+                &:hover{
+                  color: $grey-light;
+                }
+              }
             }
           }
         }
@@ -137,13 +202,41 @@ body {
   .container{
     &.to-top{
       margin-top: -60px;
+      width: 100%;
+      background: url("/images/default-page.jpg");
+      background-size: cover;
       .site-login, .site-registration{
+        margin-top: 100px;
         .switch-link{
           margin-left: 10px;
           color: $site-color;
           text-shadow: 1px 1px 1px 1px $site-color;
           &:hover{
             color: $site-color-hover;
+          }
+        }
+      }
+    }
+    &.welcome{
+      width: 100%;
+      min-height: 800px;
+      background: url("/images/default-page.jpg");
+      background-size: cover;
+      text-align: center;
+      .text {
+        color: #ffffff;
+        margin-top: 150px;
+        text-shadow: 1px 1px black;
+        div {
+          &.big {
+            font-size: 2em;
+            margin-bottom: 30px;
+            line-height: 20px;
+          }
+          &.small {
+            font-size: 1.2em;
+            font-weight: 300;
+            line-height: 10px;
           }
         }
       }
@@ -309,6 +402,82 @@ body {
         right: -30px;
         top: -13px;
       }
+    }
+  }
+  .loader-bg {
+    position: fixed;
+    z-index: 10;
+    background: $milk;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    //min-height: $max-hotel-height;
+    img {
+      position: absolute;
+      width: 130px;
+      height: 130px;
+      left: 50%;
+      top: 50%;
+      margin-left: -65px;
+      margin-top: -65px;
+    }
+  }
+
+  .stoputei-icon{
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    background-image: url("/images/hotel-icons.png");
+    &.parking{
+      background-position: -5px -6px;
+    }
+    &.nutrition{
+      background-position: -5px -65px;
+    }
+    &.beach{
+      background-position: -5px -126px;
+    }
+    &.on_water{
+      background-position: -5px -191px;
+    }
+    &.business{
+      background-position: -5px -254px;
+    }
+    &.relaxation{
+      background-position: -5px -729px;
+    }
+    &.for_child{
+      background-position: -5px -580px;
+    }
+    &.sport{
+      background-position: -5px -796px;
+    }
+    &.in_room{
+      background-position: -5px -860px;
+    }
+    &.cleaning_clothes{
+      background-position: -5px -926px;
+    }
+    &.auto{
+      background-position: -5px -1047px;
+    }
+    &.spa{
+      background-position: -5px -1111px;
+    }
+    &.smoke{
+      background-position: -5px -1295px;
+    }
+    &.internet{
+      background-position: -5px -1354px;
+    }
+    &.special_room{
+      background-position: -5px -1232px;
+    }
+    &.other{
+      background-position: -5px -324px;
     }
   }
 }
