--- a/web/css/auth.scss
+++ b/web/css/auth.scss
@@ -23,6 +23,7 @@
       color: $green;
       font-size: 1.1em;
       font-weight: 600;
+      text-shadow: 1px 1px green;
     }
   }
   .form-group{
