--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -131,7 +131,7 @@ body {
           padding: 0px 35px;
           margin-top: 11px;
           margin-bottom: -12px;
-          color: $site-color-hover;
+          color: #bfbfbf;
           &:hover {
             color: #ffffff;
           }
@@ -150,7 +150,7 @@ body {
           a{
             outline: none;
             background: transparent;
-            color: $site-color-hover;
+            color: #bfbfbf;
             text-align: center;
             span{
               //margin: auto;
@@ -187,8 +187,9 @@ body {
                 text-align: left;
                 margin-top: -9px;
                 margin-bottom: -9px;
+                color: $grey-dark;
                 &:hover{
-                  color: $grey-light;
+                  color: $site-color-hover;
                 }
               }
             }
@@ -203,6 +204,7 @@ body {
     &.to-top{
       margin-top: -60px;
       width: 100%;
+      min-height: 800px;
       background: url("/images/default-page.jpg");
       background-size: cover;
       .site-login, .site-registration{
