--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -128,6 +128,7 @@
           &:first-child{
             background: $grey-light;
             padding-right: 0px;
+            padding-bottom: 15px;
           }
         }
         &.implicit {
@@ -135,7 +136,6 @@
           visibility: hidden;
         }
         .filter, .create-tour, .create-flight {
-          padding: 0px;
           &.inactive {
             &:after {
               content: '';
@@ -161,6 +161,7 @@
         }
         form {
           max-width: 240px;
+          overflow-x: hidden;
           .form-group {
             margin-bottom: 0;
             input[type="text"], input[type="email"], input[type="password"], [type="submit"], select, [name="get-tour-button"], [type="number"], [name*="create-"], #gettourform-hotel_id {
@@ -176,6 +177,11 @@
               label {
                 color: $grey-text;
               }
+            }
+            &.field-gettourform-night_min, &.field-gettourform-night_max{
+              width: 49%;
+              float: left;
+              margin-left: -3px;
             }
           }
           .voyage_is_direct_from, .voyage_is_direct_to {
