--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -1,7 +1,7 @@
 //color variable
-$site-color: #0000cd;
-$site-color-hover: #000097;
-$site-color-light: rgb(59, 95, 255);
+$site-color: #0000b0;
+$site-color-hover: #00007b;
+$site-color-light: rgb(56, 85, 224);
 $grey: #b1b1b1;
 $grey-light: #d0d0d0;
 $grey-extra-light: #f0f0f0;
